suppliers, drugs, brands and batches modules
